--- a/DrizzleDrop/app/src/main/res/layout/fragment_main.xml
+++ b/DrizzleDrop/app/src/main/res/layout/fragment_main.xml
@@ -13,59 +13,37 @@
         android:layout_height="wrap_content"
         android:textAlignment="center" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Select Location"
-        android:id="@+id/pickLocationText"
-        android:layout_below="@+id/section_label"
-        android:layout_toRightOf="@+id/section_label"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:autoText="false"
-        android:textAlignment="center" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Select Date"
-        android:id="@+id/textView"
-        android:textAlignment="center"
-        android:layout_below="@+id/pickLocationText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="132dp"
-        android:layout_alignRight="@+id/pickLocationText"
-        android:layout_alignEnd="@+id/pickLocationText" />
-
     <CalendarView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/calendarView"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/textView" />
+        android:layout_below="@+id/selectLocation"
+        android:layout_alignParentStart="true" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Select a location to travel from"
         android:id="@+id/selectLocation"
-        android:layout_below="@+id/pickLocationText"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginTop="44dp"
         android:textAlignment="center"
         android:height="50dp"
         android:textSize="20dp"
+        android:text="@string/location"
         android:clickable="true"
         android:onClick="onClick"
-        android:layout_alignParentRight="true"
         android:focusable="false"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calculate Delay"
+        android:id="@+id/button"
+        android:background="#b8c7c7"
+        android:layout_below="@+id/calendarView"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"/>
 
 </RelativeLayout>
