--- a/DrizzleDrop/app/src/main/res/layout/fragment_main.xml
+++ b/DrizzleDrop/app/src/main/res/layout/fragment_main.xml
@@ -31,6 +31,7 @@
         android:background="#b8c7c7"
         android:layout_alignBottom="@+id/calendarView"
         android:layout_alignParentStart="true"
+        android:onClick="onClick1"
         android:layout_alignParentEnd="true" />
 
     <TextView
