--- a/DrizzleDrop/app/src/main/res/layout/content_delay_calc.xml
+++ b/DrizzleDrop/app/src/main/res/layout/content_delay_calc.xml
@@ -14,6 +14,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/VehiclePic"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true" />
+        android:contentDescription="Either bus or train"
+        android:maxHeight="50dp"
+        android:adjustViewBounds="true" />
 </RelativeLayout>
