--- a/DrizzleDrop/app/src/main/res/layout/content_delay_calc.xml
+++ b/DrizzleDrop/app/src/main/res/layout/content_delay_calc.xml
@@ -15,6 +15,69 @@
         android:layout_height="wrap_content"
         android:id="@+id/VehiclePic"
         android:contentDescription="Either bus or train"
-        android:maxHeight="50dp"
-        android:adjustViewBounds="true" />
+        android:src="@drawable/train"
+        android:maxHeight="100dp"
+        android:adjustViewBounds="true"
+        android:minWidth="200dp"
+        android:minHeight="100dp"
+        android:maxWidth="200dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Date"
+        android:id="@+id/dateDisplay"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/VehiclePic"
+        android:textAlignment="center"
+        android:textSize="35dp"
+        android:height="75dp" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/weatherIcon"
+        android:minWidth="100dp"
+        android:src="@drawable/sunny"
+        android:minHeight="100dp"
+        android:maxHeight="150dp"
+        android:adjustViewBounds="true"
+        android:maxWidth="200dp"
+        android:layout_below="@+id/VehiclePic"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Expected Delay:"
+        android:id="@+id/expectedDelay"
+        android:layout_alignTop="@+id/weatherIcon"
+        android:layout_alignParentEnd="true" />
+
+    <ImageView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageView"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:src="@drawable/yahoo"
+        android:layout_marginBottom="45dp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="0 Minutes"
+        android:id="@+id/DelayTime"
+        android:layout_below="@+id/expectedDelay"
+        android:layout_alignStart="@+id/expectedDelay"
+        android:layout_alignBottom="@+id/weatherIcon"
+        android:layout_alignEnd="@+id/expectedDelay"
+        android:textAlignment="center"
+        android:textSize="35dp"
+        android:textStyle="bold" />
 </RelativeLayout>
