good for nowwww
This is what we're using for website, but not really completely working

--- a/DrizzleDrop/app/src/main/res/layout/fragment_main.xml
+++ b/DrizzleDrop/app/src/main/res/layout/fragment_main.xml
@@ -43,7 +43,7 @@
         android:layout_alignEnd="@+id/calendarView"
         android:layout_toEndOf="@+id/section_label"
         android:editable="false"
-        android:text="Click to select location"
+        android:text="World Trade Center"
         android:onClick="onClick"
         android:clickable="true"
         android:textAlignment="center" />
