--- a/DrizzleDrop/app/src/main/res/layout/fragment_main.xml
+++ b/DrizzleDrop/app/src/main/res/layout/fragment_main.xml
@@ -20,4 +20,22 @@
         android:textAlignment="center"
         android:layout_alignTop="@+id/section_label" />
 
+    <CalendarView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/calendarView"
+        android:layout_below="@+id/TextViewLocation"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Calculate Delay"
+        android:id="@+id/buttonCalculateDelay"
+        android:layout_below="@+id/calendarView"
+        android:layout_alignParentStart="true"
+        android:layout_alignEnd="@+id/calendarView"
+        android:background="#b8c7c7"
+        android:onClick="onClickCalculate" />
+
 </RelativeLayout>
