--- a/DrizzleDrop/app/src/main/res/layout/fragment_main.xml
+++ b/DrizzleDrop/app/src/main/res/layout/fragment_main.xml
@@ -18,7 +18,8 @@
         android:layout_alignParentEnd="true"
         android:id="@+id/TextViewLocation"
         android:textAlignment="center"
-        android:layout_alignTop="@+id/section_label" />
+        android:layout_alignTop="@+id/section_label"
+        android:onClick="onClickSelect" />
 
     <CalendarView
         android:layout_width="wrap_content"
