--- a/DrizzleDrop/app/src/main/res/layout/bus.xml
+++ b/DrizzleDrop/app/src/main/res/layout/bus.xml
@@ -1,10 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context="com.drizzledrop.drizzledrop.MainActivity$PlaceholderFragment">
+    android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
         android:layout_width="wrap_content"
@@ -13,25 +9,26 @@
         android:text="Default"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
-        android:id="@+id/TextViewLocation"
+        android:id="@+id/TextViewLocationBus"
         android:textAlignment="center"
+        android:layout_marginTop="20dp"
         android:onClick="onClickSelect" />
 
     <CalendarView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/calendarView"
-        android:layout_below="@+id/TextViewLocation"
+        android:id="@+id/calendarViewBus"
+        android:layout_below="@+id/TextViewLocationBus"
         android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Calculate Delay"
-        android:id="@+id/buttonCalculateDelay"
-        android:layout_below="@+id/calendarView"
+        android:id="@+id/buttonCalculateDelayBus"
+        android:layout_below="@+id/calendarViewBus"
         android:layout_alignParentStart="true"
-        android:layout_alignEnd="@+id/calendarView"
+        android:layout_alignEnd="@+id/calendarViewBus"
         android:background="#b8c7c7"
         android:onClick="onClickCalculate" />
 
