--- a/DrizzleDrop/app/src/main/res/layout/train.xml
+++ b/DrizzleDrop/app/src/main/res/layout/train.xml
@@ -6,13 +6,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
-        android:text="Default"
+        android:text="Train"
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:id="@+id/TextViewLocationTrain"
         android:textAlignment="center"
         android:layout_marginTop="20dp"
-        android:onClick="onClickSelect" />
+        android:onClick="" />
 
     <CalendarView
         android:layout_width="wrap_content"
